[package]
name = "cytc1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { path = "pest/pest" }
pest_derive = { path = "pest/derive" }
either = "1.6.1"
cythan-compiler = { git = "https://github.com/Cythan-Project/cythan-compiler" }
cythan = { path = "Cythan-V2" }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dev-dependencies]
serde = { features = ["derive"], version = "1.0.130" }
serde_json = "1.0.67"
